# Crypto_Pipeline

./: .gitignore  Components Brief.rtf  ConcernPoints.rtf  LICENSE  architecture_choices.txt
Crypto-Pipeline/: .dockerignore  .gitignore  .pylintrc  CLEANUP_SUMMARY.md  Dockerfile  Makefile  README.md  SECURITY_ALERT_REMEDIATION.md  dbt_project.yml  pyproject.toml  requirements.txt  requirements_analysis.md
Crypto-Pipeline/airflow/: Dockerfile  README.md  RESOURCE_OPTIMIZATION_SUMMARY.md  SECURITY_GUIDE.md  deploy.sh  generate_certs.sh  monitor_resources.sh  requirements.txt
Crypto-Pipeline/airflow/config/: airflow.cfg
Crypto-Pipeline/airflow/dags/: crypto_dbt_dag.py  crypto_pipeline_dag.py  crypto_streaming_dag.py
Crypto-Pipeline/airflow/nginx/: nginx.conf
Crypto-Pipeline/airflow/nginx/conf.d/: airflow.conf
Crypto-Pipeline/alerting/: price_alert_consumer.py  requirements.txt
Crypto-Pipeline/consumer/: config.py  consumer_pool.py  postgres_consumer.py  requirements.txt
Crypto-Pipeline/database/init/: 00_create_user.sql  01_schema.sql  02_optimization.sql
Crypto-Pipeline/dbt_crypto/: .user.yml  README.md  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml  requirements.txt  sample_queries.sql  test_dbt_setup.sh  test_models.py  test_models.sh
Crypto-Pipeline/dbt_crypto/models/: schema.yml
Crypto-Pipeline/dbt_crypto/models/marts/: crypto_ohlcv_15min.sql  (+2 more)
Crypto-Pipeline/diagrams/: 0b_technical_components.html  0d_data_lifecycle.html  1_error_handling_recovery.html  2_scaling_strategy.html  3_deployment_architecture.html  README.md
Crypto-Pipeline/monitoring/: Dockerfile  Dockerfile.periodic-email  MONITORING_GUIDE.md  PERIODIC_EMAIL_README.md  SECURE_SETUP.md  actually_working_dashboard.json  deploy-periodic-email.sh  deploy-with-secrets.sh  periodic_email_service.py  requirements.txt  test_email_setup.py  throughput_monitor.py
Crypto-Pipeline/monitoring/prometheus/: prometheus.yml
Crypto-Pipeline/producer/: coinbase_producer.py  config.py  requirements.txt  test_producer.py
Crypto-Pipeline/scripts/: clean_dbt.sh  clean_environment.sh  complete_cleanup.sh  run_dbt.sh  test_pylint.sh
Crypto-Pipeline/tests/: requirements.txt
(+24 files in other folders)
